Bars submission form added and connected

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,6 @@
-doctype html
-html
-  head
-    title= `${title}`
-  body
-    .container
-      h1= title
+extends layout
+
+block content
+  h1 Edinbar Dashboard
+  p Submit and control the content for your bar
+  p Please login below
