--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,5 @@ extends layout
 block content
   h1 Edinbar Dashboard
   p Submit and control the content for your bar
-  p Please login below
+  p Logins are coming
+  a(href="/add" class="button button--simple") Add a bar
