--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -2,5 +2,37 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  
+  max-width: 600px;
+}
+
+.form-section {
+  display: block;
+  margin: 0 30px 30px 30px;
+
+  label {
+    display: block
+  }
+}
+
+.form-input {
+  display: block;
+  width: 100%;
+  padding: 15px;
+
+  &.text {
+
+  }
+
+  &.textarea {
+
+  }
+
+  &.tags {
+    display: flex;
+    padding: 0;
+
+    .tag {
+      padding-right: 30px;
+    }
+  }
 }
