--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -1,16 +1,25 @@
 .form {
   display: block;
-  margin-left: auto;
   margin-right: auto;
   max-width: 600px;
 }
 
 .form-section {
-  display: block;
-  margin: 0 30px 30px 30px;
+  display: flex;
+  margin: 0 30px 30px 0;
 
   label {
-    display: block
+    display: block;
+    width: 140px;
+    margin-right: 20px;
+  }
+
+  &.stacked {
+    flex-wrap: wrap;
+    > * {
+      flex: 1 0 100%;
+      padding: 15px 0;
+    }
   }
 }
 
@@ -28,11 +37,11 @@
   }
 
   &.tags {
-    display: flex;
     padding: 0;
 
     .tag {
       padding-right: 30px;
+      display: inline-block;
     }
   }
 }
