Editing bars and locking down permissions.

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -39,9 +39,11 @@ html
           h4 Navigation
           ul.edb-nav--links
             li.edb-nav--link
-              a(href="/") Dashboard
+              a(href="/") dashboard
             li.edb-nav--link
-              a(href="/add") Manage Bars
+              a(href="/add") Add Bars
+            li.edb-nav--link
+              a(href="/manage-bars") Manage Bars
             li.edb-nav--link
               a(href="/") Profile
             li.edb-nav--link
