--- a/public/sass/components/_loginCard.scss
+++ b/public/sass/components/_loginCard.scss
@@ -26,4 +26,10 @@
     padding: 30px;
     border: 1px solid #EBEEF3;
   }
+
+  .register-link {
+    margin: 20px 0;
+    display: block;
+    text-align: center;
+  }
 }
