--- a/views/account.pug
+++ b/views/account.pug
@@ -5,7 +5,8 @@ include mixins/_editUserForm
 block content
   h1 Hello, #{user.name}!
   
-  h2 Manage your bars
+  h2 Looking to update content on your bars?
+    a(href="/manage-bars" class="button button-primary") Manage Bars
   
   .edb-panel.edb-panel--wide
     .edb-panel--header
