--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,6 @@ block content
       h1.title Edinbar Dashboard
     .login-card--inner
       +loginForm()
-    a(href="/register") Not got an account? Register
+    a(href="/register" class="register-link") Not got an account? Register
     
     
